# internal/config/endpoints.go
@@ -3,7 +3,15 @@ package config
 var (
 	SEND_TEXT_PUSH_NOTIFICATION_HEAD = "/push"
 	SEND_TEXT_PUSH_NOTIFICATION = "/text"
-	SEND_IMAGE_PUSH_NOTIFICATION = "/image"
+	SEND_TEXT_AND_IMAGE_PUSH_NOTIFICATION = "/text-image"
+
+	SEGMENTATION  = "/segment"
+	SEGMENT_LIST_ALL  = "/all"
+	SEGMENT_CREATE = "/create"
+	SEGMENT_DELETE = "/delete"
+	SEGMENT_UPDATE = "/update"
 
 	WEBSCOKET_CHANNEL = "/ws/announcement"
+
+	SWAGGER_DOCS = "/swagger/*any"
 )
